<resources>
    <string name="app_name">Easy Math</string>
    <string name="about_text"><b>About Easy math</b> \nEasy Math is inspired by Digidots, a way to
        teach basic addition,subtraction,multiplication and division skills.
        Students learn the position of dots and lines (forming an \'X\') on each digit. The number
        of marks on each digit
        corresponds to the value of the digit.For example to add two digits together, students count the
        marks on each digit to find the sum.
        In \'Learn\' mode, students learn the placement of the dots and lines on the digits.
        In \'Practice\' mode, students have to remember
        where the dots and lines are located. In \'Addition Quiz\' mode for example, student get to apply what
        they have learned to answer ten addition
        problems.
    </string>
    <string name="_9">9</string>
    <string name="_6">6</string>
    <string name="_12">12</string>
    <string name="plus">Plus</string>
    <string name="first_number">First Number</string>

    <string name="score">Score:</string>
    <string name="next">Next</string>
    <string name="refresh">Refresh</string>
    <string name="previous">Previous</string>
    <string name="logo">logo</string>
    <string name="quiz_complete">Quiz Complete!</string>
    <string name="your_score">Your score:</string>
    <string name="_0">0</string>
    <string name="home">Home</string>
    <string name="minus">minus</string>
    <string name="background">Background</string>

    <string name="about_easy_math">About Easy Math</string>
    <string name="division_quiz">Division Quiz</string>
    <string name="subtraction_quiz">Subtraction Quiz</string>
    <string name="multiplication_quiz">Multiplication Quiz</string>
    <string name="addition_quiz">Addition Quiz</string>
    <string name="practice">Practice</string>
    <string name="learn">Learn</string>
</resources>
