<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg3"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.martin.easymathforpreschool.MainActivity">

    <Space
        android:id="@+id/dummy"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:layout_toLeftOf="@+id/dummy"
        android:background="@drawable/circle_nav"
        android:onClick="countDots"
        android:padding="10dp"
        android:layout_toStartOf="@+id/dummy"
        android:text="@string/learn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_below="@+id/logo"
        android:layout_margin="10dp"
        android:layout_toEndOf="@+id/dummy"
        android:layout_toRightOf="@+id/dummy"
        android:background="@drawable/circle_nav"
        android:onClick="practice"

        android:padding="10dp"
        android:text="@string/practice" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_margin="10dp"
        android:layout_toLeftOf="@+id/dummy"
        android:background="@drawable/circle_nav"

        android:onClick="add"
        android:padding="10dp"
        android:layout_toStartOf="@+id/dummy"
        android:text="@string/addition_quiz" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button3"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"

        android:layout_marginTop="36dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:layout_toLeftOf="@+id/dummy"
        android:background="@drawable/circle_nav"
        android:onClick="multiply"
        android:padding="10dp"
        android:layout_toStartOf="@+id/dummy"
        android:text="@string/multiplication_quiz" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button3"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"

        android:layout_marginTop="-56dp"
        android:layout_marginEnd="82dp"
        android:layout_marginRight="82dp"
        android:layout_marginBottom="10dp"
        android:layout_toStartOf="@+id/button3"
        android:layout_toLeftOf="@+id/button3"
        android:background="@drawable/circle_nav"
        android:onClick="subtract"
        android:padding="10dp"
        android:text="@string/subtraction_quiz" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button3"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"

        android:layout_marginTop="43dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="10dp"
        android:layout_toStartOf="@+id/button3"
        android:layout_toLeftOf="@+id/button3"
        android:background="@drawable/circle_nav"
        android:onClick="divide"
        android:padding="10dp"
        android:text="@string/division_quiz" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_margin="10dp"
        android:layout_toEndOf="@+id/dummy"
        android:layout_toRightOf="@+id/dummy"
        android:background="@drawable/circle_nav"
        android:onClick="about"
        android:padding="10dp"
        android:text="@string/about_easy_math" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo"
        android:src="@drawable/easymathlogo" />

</RelativeLayout>
