<?xml version="1.0" encoding="utf-8"?>
<androidx.percentlayout.widget.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg3"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.martin.easymathforpreschool.About">

    <ImageView
        android:id="@+id/DDLogo"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/easymathlogo"
        app:layout_heightPercent="15%" />

    <ImageView
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/DDLogo"
        android:alpha=".6"
        android:contentDescription="@string/background"
        android:src="@color/colorWhite" />

    <TextView
        android:id="@+id/aboutText"
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        android:layout_below="@+id/DDLogo"
        android:text="@string/about_text"
        android:autoLink="all"
        android:linksClickable="true"
        android:padding="15dp"
        android:scrollbars="vertical"
        android:textSize="20sp"

        />

</androidx.percentlayout.widget.PercentRelativeLayout>
